--- a/bower.json
+++ b/bower.json
@@ -7,7 +7,11 @@
     "email": "david.thevenin@gmail.com"
   },
   "dependencies": {
-    "iscroll": "*"
+    "iscroll": "*",
+    "fontawesome": "*",
+    "angular": "1.3.1",
+    "angular-touch": "1.3.1",
+    "angular-route": "1.3.1"
   },
   "license": "MIT",
   "private": true,
