--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,9 @@
     "fontawesome": "*",
     "angular": "1.3.1",
     "angular-touch": "1.3.1",
-    "angular-route": "1.3.1"
+    "angular-route": "1.3.1",
+    "angular-animate": "1.3.1",
+    "animate.css": ""
   },
   "license": "MIT",
   "private": true,
